# qtube

./: .gitignore  LICENSE  README.md
client/app/: build.gradle
client/app/src/androidTest/java/com/odm/queuetube/: ExampleInstrumentedTest.java
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/odm/queuetube/: AppCompatPreferenceActivity.java  PostPageTask.java  PostPageTaskConfig.java  QueueTubeActivity.java  QueueTubeSettingsActivity.java  QueueTubeShareActivity.java
client/app/src/main/res/drawable/: check.xml  cross.xml  ic_info_black_24dp.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  wait.xml
client/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
client/app/src/main/res/layout/: activity_queue_tube_share.xml
client/app/src/main/res/menu/: settings.xml
client/app/src/main/res/values/: strings.xml
client/app/src/main/res/xml/: pref_general.xml  pref_headers.xml
client/app/src/test/java/com/odm/queuetube/: ExampleUnitTest.java
server/: CMakeLists.txt  qtube-server.service
server/apps/: CMakeLists.txt
server/apps/cmake/: FindLibMHD.cmake
server/apps/include/: helpers.h  queuetube_daemon.h
server/apps/src/: helpers.cpp  main.cpp  queuetube_daemon.cpp
server/lib/: CMakeLists.txt
server/lib/include/watchdog/: watchdog.h
server/lib/src/: watchdog.cpp
